david/Traefik-Loadbalancer/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    run: nginx
  type: ClusterIP
