david/Traefik-Loadbalancer/nginx-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx-hej.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
